# gmail_agent

./: .gitignore  README.md  pyproject.toml
src/: LLM_Extraction.py  chat_manager.py  database.py  email_address.csv  google_cloud.py  mainV2.py
